# opencode-manager

./: .gitignore  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  API_CHANGES.md  ISOLATION.md  LICENSE  Makefile  README.md  REFACTOR.md  opencode_api.json  opencode_versions.json  package.json  pyproject.toml  pyrightconfig.json
examples/: basic_usage.py
scripts/: check_dev_deps.sh  check_emojis.py  check_opencode_naming.sh  download_opencode.py  run_pyright.sh  setup.py  setup_git.sh
src/opencode_manager/: __init__.py  client.py  constants.py  exceptions.py  isolation.py  models.py  process.py  server.py  session.py  session_manager.py
test_resources/: README.md  setup.sh
tests/: __init__.py  test_integration.py  test_isolation.py  test_server.py
