[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-manager"
version = "0.1.0"
description = "Python library for managing isolated opencode server instances"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencode-ai>=0.1.0a36",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "detect-secrets>=1.4.0",
    "bandit>=1.7.0",
    "pydocstyle>=6.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "-s"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
